@@ -1,3 +1,8 @@
+Sat Apr 11 04:46:42 2015  Eric Wong  <e@80x24.org>
+
+	* lib/net/protocol.rb (rbuf_fill): avoid exception with read_nonblock
+	  [ruby-core:68787] [Feature #11044]
+
 Fri Apr 10 23:57:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dir.c (need_normalization): use getattrlist() if fgetattrlist()
